Bug 148101 - UI Remote Files dialog has too aggressive File name autocomplete
Summary: UI Remote Files dialog has too aggressive File name autocomplete
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-03-20 21:18 UTC by Gabor Kelemen (Collabora)
Modified: 2022-04-21 11:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the problematic behavior (624.71 KB, video/x-theora+ogg)
2022-03-20 21:18 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-03-20 21:18:11 UTC
Created attachment 178996 [details]
Video showing the problematic behavior

When trying to save a file in the Remote Files dialog, the file name autocompletion works instantly when the last part of the file name is deleted. This makes it inconvenient to save files with a different name to the same remote directory they were opened from.

1, Open a file from the Remote Files dialog
2, Choose Save - Save Remote File
3, Go to the same directory that contained the file
4, In the File name box try to remove the last few letters of the name with Backspace, Delete or by highlighting with Ctrl-Shift-Left and then Backspace/Delete.

Autocomplete instantly completes the current file name, making changes like file_v2.odt -> file_v3.odt rather tricky.

Bibisected in linux-6.4 to:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=09e3d45cdc5c739e5246388a83ccfc6d76bf66e9

author	Caolán McNamara <caolanm@redhat.com>	2019-10-21 14:20:12 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-10-29 13:58:47 +0100

weld fpicker cluster

Before this autocomplete was not aggressive, only the End key triggered it the way currently any key trigger it.

Adding CC to: Caolán McNamara
Comment 1 Commit Notification 2022-04-14 14:11:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f793465819f63aa001f5842f232be24d13153fd

tdf#148101 don't autocomplete remote files dialog entry on delete/backspace

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2022-04-19 13:29:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/b8485b4a4675b5ae2fcee9d44d986415a7165e64

tdf#148101 don't autocomplete remote files dialog entry on delete/backspace

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gabor Kelemen (Collabora) 2022-04-21 11:46:24 UTC
Verified that this works in:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 5e843d732d0a3f7613eaf003fc5c8dcc595b578d
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Thanks for solving this one!