tdf#148101 don't autocomplete remote files dialog entry on delete/backspace

Change-Id: Ieddb41eb37e7090416a418afeffb76ce0eddf90a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133009
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>